deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-2048
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-2048
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-2048
    spec:
      containers:
      - image: 737185589565.dkr.ecr.ap-south-1.amazonaws.com/testpoc:1.1
        imagePullPolicy: Always
        name: app-2048
        ports:
        - containerPort: 80
