service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-actions
spec:
  selector:
    app: primuslearning
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
